--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,3 +20,10 @@ h1 {
 nav {
     text-align: end;
 }
+
+/* INDEX */
+.banner {
+    width: max-content;
+    margin: 0 auto 0 auto;
+    display: block;
+}
