--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300&display=swap');
 
+body {
+
+}
+
 h1 {
     font-family: 'Montserrat', sans-serif;
     font-size: 96px;
@@ -23,7 +27,7 @@ nav {
 
 /* INDEX */
 .banner {
-    width: max-content;
+    width: 100%;
     margin: 0 auto 0 auto;
     display: block;
 }
