--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300&family=Open+Sans&display=swap');
 
 body {
 
@@ -7,6 +7,14 @@ body {
 h1 {
     font-family: 'Montserrat', sans-serif;
     font-size: 98px;
+}
+
+h2 {
+    font-family: 'Montserrat', sans-serif;
+}
+
+p {
+    font-family: 'Open Sans', sans-serif;
 }
 
 /* HEADER  */
@@ -65,4 +73,7 @@ nav a {
 
 #wrapper {
     width: 1200px;
+    margin: 0 auto 0 auto;
+    border: 1px solid rgb(189, 189, 189);
+    height: 100%;
 }
