--- a/public/css/style.css
+++ b/public/css/style.css
@@ -50,6 +50,10 @@ nav a {
     color: black;
 }
 
+.linkEffect {
+    cursor: pointer;
+}
+
 /* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
 @media screen and (max-width: 600px) {
     h1 {
